Add part name field

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
 		</div>
 
 		<div id="PARTS_DATA_VIEW">
+			<div id="PDV_NAME"></div>
 			<div id="PDV_COMMENT"></div>
 
 			<div id="PDV_TYPE" class="pdv_item_container"><div class="pdv_item_name">TYPE</div><div class="pdv_val">-</div></div>
