--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link type="text/css" href="cosmicalc.css" rel="stylesheet" />
 	<link rel="shortcut icon" href="img/favicon.ico" />
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/lz-string.min.js"></script>
 	<script type="text/javascript" src="js/cosmicalc.js"></script>
 </head>
 
